# react-native-jsi-ixwebsocket

./: CONTRIBUTING.md  README.md  package.json  react-native-jsi-ixwebsocket.podspec  tsconfig.json
android/: CMakeLists.txt
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: WsHelper.cpp  WsHelper.h
android/src/main/java/com/reactnativejsiixwebsocket/: CertUtils.java  JsiIXWebSocketModule.java  JsiIXWebSocketPackage.java  WsHelper.java
cpp/: JsiWs.cpp  JsiWs.h
cpp/ixwebsocket/: IXSocketAppleSSL.cpp  IXSocketAppleSSL.h  IXSocketConnect.cpp  IXSocketFactory.cpp
example/: app.json  package.json
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativejsiixwebsocket/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativejsiixwebsocket/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/gradle/wrapper/: gradle-wrapper.properties
example/ios/: File.swift  Podfile  main.jsbundle
example/ios/JsiIxwebsocketExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/JsiIxwebsocketExample.xcodeproj/: project.pbxproj
example/ios/JsiIxwebsocketExample.xcodeproj/xcshareddata/xcschemes/: JsiIxwebsocketExample.xcscheme
example/ios/JsiIxwebsocketExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: JsiIxwebsocket.h  JsiIxwebsocket.mm
ios/JsiIxwebsocket.xcodeproj/: project.pbxproj
scripts/: build.sh  ixwebsocket.patch
src/: index.tsx
